fix a print problem on Firefox

--- a/print.css
+++ b/print.css
@@ -31,6 +31,9 @@ html {
 .banner {
     display: none;
 }
+#wrapper {
+    display: block;
+}
 .doc-main {
     width: 96%;
     margin: 1%;
